initial commit of branch level-3

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -19,7 +19,8 @@
 }
 
 .header_color_navy {
-  background-color: #073042
+  background-color: #073042;
+  color: #FFFFFF; 
 }
 
 .header__container {
