--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -3,7 +3,16 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
+  
 }
+
+.navigation_location_main {
+  color:white;
+};
+
+.navigation_location_movies {
+  color: black;
+};
 
 .navigation__list {
   display: flex;
@@ -25,7 +34,7 @@
   font-size: 13px;
   cursor: pointer;
   line-height: 1.38;
-  
+  color: inherit;
 	text-decoration: none;
   transition: opacity 0.3s linear;
 }
@@ -41,7 +50,7 @@
   line-height: 1.14;
   transition: opacity 0.3s linear;
   text-decoration: none;
-  
+  color: inherit;
   align-self: center;  
 }
 
@@ -56,15 +65,6 @@
   text-decoration: none;
 }
 
-.navigation-button-open {
-  display: none;
-  width: 44px;
-  height: 44px;
-  border: none;
-  padding: 0;  
-  background-image: url(../../../images/burger.svg);
-  background-color: transparent;
-}
 
 .navigation__profile {
   display:flex;
@@ -80,7 +80,7 @@
   align-self: center;
   width: 30px;
   height: 30px;  
-  background: url(../../../images/account_icon.svg) no-repeat;
+  background: url(../../images/account_icon.svg) no-repeat;
   background-position: center;
   background-color: #F9F9F9;
   border-radius: 6px;  
