--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -36,7 +36,7 @@
   border-bottom: none;
 }
 
-.profile__input-label {
+.profile__span {
   font-weight: 500;
   font-size: 11px;
   line-height: 1.21;
@@ -57,6 +57,11 @@
   overflow: hidden;  
 }
 
+.profile__input_type_error{
+  color: #FF3055;
+  
+}
+
 .profile__input:focus {
   outline: none;
   text-align: center;
@@ -71,6 +76,20 @@
   margin: 0;
   padding: 0;
   list-style-type: none;  
+}
+
+.profile__error {
+  opacity: 0;
+  display: block;
+  color: #FF3055;
+  margin: 0;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 12px;  
+}
+
+.profile__error_visible {
+  opacity: 1;
 }
 
 .profile__edit {
@@ -116,29 +135,52 @@
   color: #ff004c;
 }
 
-.profile__button {
+.profile__btn {
   border: none;
   border-radius: 3px;
-  width: 410px;
+
   height: 45px;
   color: white;
   background: #3456f3;
   cursor: pointer;
 }
 
-.profile__button:hover {
+.profile__btn:hover {
   opacity: 0.8;
 }
 
-.profile__button:active {
+.profile__btn:active {
   transform: translateY(1px);
 }
 
-.profile__button:disabled {
+.profile__btn:disabled {
   color: #c2c2c2;
   background: #f8f8f8;
   pointer-events: none;
+  
 }
+
+.profile__btn-msg-error {
+  color: #ff004c;
+  text-align: center;
+  font-size: 14px;
+}
+
+.profile__btn-msg-error_hidden {
+  display: none;
+}
+
+
+
+.profile__btn-msg-success {
+  color: #3ddc84;
+  text-align: center;
+  font-size: 14px;
+}
+
+.profile__btn-msg-success_hidden {
+  display: none;
+} 
 
 @media screen and (max-width: 768px) {
   .profile__container {
