--- a/src/components/Header/MoviesHeader/MoviesHeader.css
+++ b/src/components/Header/MoviesHeader/MoviesHeader.css
@@ -25,7 +25,7 @@
   font-size: 13px;
   cursor: pointer;
   line-height: 1.38;
-  
+  color: inherit;  
 	text-decoration: none;
   transition: opacity 0.3s linear;
 }
@@ -41,7 +41,7 @@
   line-height: 1.14;
   transition: opacity 0.3s linear;
   text-decoration: none;
-  
+  color: inherit;
   align-self: center;  
 }
 
