--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,11 +1,11 @@
-/*.navigation {
+.navigation {
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: 100%;
   
 }
-*/
+
 .navigation_location_main {
   color:white;
 };
